# django-copilot

./: .gitignore  .pre-commit-config.yaml  README.md  buildspec.yml  main.py  pyproject.toml  test_main.py  tox.ini
dbt_copilot_python/: database.py  network.py  utility.py
dbt_copilot_python/celery_health_check/: const.py  healthcheck.py  heartbeat.py  liveness_probe.py
tests/: conftest.py  test_database.py  test_healthcheck.py  test_main.py  test_network.py  test_utility.py
