[tool.poetry]
name = "dbt-copilot-python"
version = "0.1.1"
description = "Helper functions to run Django and Flask applications in AWS Copilot/ECS."
authors = ["Department for Business and Trade Platform Team <sre-team@digital.trade.gov.uk>"]
readme = "README.md"
packages = [{ include = "dbt_copilot_python" }]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
requests-mock = "^1.11.0"
pre-commit = "^3.3.3"
tox = "^4.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
