[tool.black]
line-length = 100

[tool.poetry]
name = "dbt-copilot-python"
version = "0.2.1"
description = "Helper functions to run Django and Flask applications in AWS Copilot/ECS."
authors = ["Department for Business and Trade Platform Team <sre-team@digital.trade.gov.uk>"]
readme = "README.md"
packages = [{ include = "dbt_copilot_python" }]

[tool.poetry.dependencies]
python = "^3.9"
celery = "^5.3.6"
opentelemetry-distro = "0.43b0"
opentelemetry-exporter-otlp = "1.22.0"
opentelemetry-instrumentation-wsgi = "0.43b0"
opentelemetry-propagator-aws-xray = "^1.0.1"
opentelemetry-sdk-extension-aws = "^2.0.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pytest = "^7.3.2"
requests-mock = "^1.11.0"
tox = "^4.6.3"
pytest-celery = "^0.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
